--- a/ux/package.json
+++ b/ux/package.json
@@ -11,28 +11,28 @@
     "lint": "eslint --ext .js,.vue ./"
   },
   "dependencies": {
-    "@apollo/client": "3.6.8",
+    "@apollo/client": "3.6.9",
     "@codemirror/autocomplete": "6.0.2",
     "@codemirror/basic-setup": "0.20.0",
     "@codemirror/closebrackets": "0.19.2",
-    "@codemirror/commands": "6.0.0",
+    "@codemirror/commands": "6.0.1",
     "@codemirror/comment": "0.19.1",
     "@codemirror/fold": "0.19.4",
     "@codemirror/gutter": "0.19.9",
     "@codemirror/highlight": "0.19.8",
     "@codemirror/history": "0.19.2",
     "@codemirror/lang-css": "6.0.0",
-    "@codemirror/lang-html": "6.0.0",
-    "@codemirror/lang-javascript": "6.0.0",
+    "@codemirror/lang-html": "6.1.0",
+    "@codemirror/lang-javascript": "6.0.1",
     "@codemirror/lang-json": "6.0.0",
     "@codemirror/lang-markdown": "6.0.0",
     "@codemirror/matchbrackets": "0.19.4",
     "@codemirror/search": "6.0.0",
     "@codemirror/state": "6.0.1",
     "@codemirror/tooltip": "0.19.16",
-    "@codemirror/view": "6.0.1",
+    "@codemirror/view": "6.0.2",
     "@lezer/common": "1.0.0",
-    "@quasar/extras": "1.14.0",
+    "@quasar/extras": "1.14.2",
     "@tiptap/core": "2.0.0-beta.176",
     "@tiptap/extension-code-block": "2.0.0-beta.37",
     "@tiptap/extension-code-block-lowlight": "2.0.0-beta.68",
@@ -59,24 +59,23 @@
     "@tiptap/vue-3": "2.0.0-beta.91",
     "@vue/apollo-option": "4.0.0-alpha.17",
     "apollo-upload-client": "17.0.0",
-    "browser-fs-access": "0.29.6",
+    "browser-fs-access": "0.30.2",
     "clipboard": "2.0.11",
-    "codemirror": "6.0.0",
-    "filesize": "9.0.9",
+    "codemirror": "6.0.1",
+    "filesize": "9.0.11",
     "filesize-parser": "1.5.0",
     "graphql": "16.5.0",
     "graphql-tag": "2.12.6",
     "js-cookie": "3.0.1",
     "jwt-decode": "3.1.2",
-    "lodash": "4.17.21",
     "lodash-es": "4.17.21",
     "luxon": "2.4.0",
     "pinia": "2.0.14",
     "pug": "3.0.2",
-    "quasar": "2.7.3",
+    "quasar": "2.7.4",
     "tippy.js": "6.3.7",
     "uuid": "8.3.2",
-    "v-network-graph": "0.5.19",
+    "v-network-graph": "0.6.3",
     "vue": "3.2.37",
     "vue-codemirror": "6.0.0",
     "vue-i18n": "9.1.10",
@@ -86,10 +85,10 @@
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "3.4.0",
-    "@quasar/app-vite": "1.0.2",
+    "@quasar/app-vite": "1.0.4",
     "@types/lodash": "4.14.182",
-    "autoprefixer": "10.4.7",
-    "eslint": "8.18.0",
+    "browserlist": "latest",
+    "eslint": "8.19.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-n": "15.2.3",
