--- a/server/modules/authentication/cas/definition.yml
+++ b/server/modules/authentication/cas/definition.yml
@@ -18,12 +18,22 @@ props:
     title: URL to the CAS Server
     hint: 'Base-URL of the CAS server, including context path. (for example: https://login.company.com/cas)'
     order: 2
+  casVersion:
+    type: String
+    title: CAS Version
+    hint: 'This provider is only tested with CAS3.0, CAS1.0 is supported by the library but we dont know if that works or not'
+    order: 3
+    default: 'CAS3.0'
   emailAttribute:
     type: String
     title: Attribute key which contains the users email
     default: email
-    order: 3
+    order: 4
   displayNameAttribute:
     type: String
     title: Attribute key which contains the users display name (leave empty if there is none)
-    order: 4
+    order: 5
+  uniqueIdAttribute:
+    type: String
+    title: Attribute key which contains the unique identifier of a user. (if empty, username will be used)
+    order: 6
