--- a/server/modules/authentication/okta/definition.yml
+++ b/server/modules/authentication/okta/definition.yml
@@ -3,6 +3,7 @@ title: Okta
 description: Okta provide secure identity management and single sign-on to any application.
 author: requarks.io
 logo: https://static.requarks.io/logo/okta.svg
+icon: /_assets/icons/ultraviolet-okta.svg
 color: blue darken-1
 website: https://www.okta.com/
 isAvailable: true
