--- a/server/modules/authentication/rocketchat/definition.yml
+++ b/server/modules/authentication/rocketchat/definition.yml
@@ -3,6 +3,7 @@ title: Rocket.chat
 description: Communicate and collaborate with your team, share files, chat in real-time, or switch to video/audio conferencing.
 author: requarks.io
 logo: https://static.requarks.io/logo/rocketchat.svg
+icon: /_assets/icons/ultraviolet-rocketchat.svg
 color: red accent-3
 website: https://rocket.chat/
 isAvailable: true
