--- a/server/modules/authentication/gitlab/definition.yml
+++ b/server/modules/authentication/gitlab/definition.yml
@@ -3,6 +3,7 @@ title: GitLab
 description: GitLab is a web-based DevOps lifecycle tool that provides a Git-repository manager providing wiki, issue-tracking and CI/CD pipeline features.
 author: requarks.io
 logo: https://static.requarks.io/logo/gitlab.svg
+icon: /_assets/icons/ultraviolet-gitlab.svg
 color: deep-orange
 website: https://gitlab.com
 isAvailable: true
