--- a/server/modules/authentication/keycloak/definition.yml
+++ b/server/modules/authentication/keycloak/definition.yml
@@ -3,6 +3,7 @@ title: Keycloak
 description: Keycloak is an open source software product to allow single sign-on with Identity Management and Access Management aimed at modern applications and services.
 author: D4uS1
 logo: https://static.requarks.io/logo/keycloak.svg
+icon: /_assets/icons/ultraviolet-keycloak.svg
 color: blue-grey darken-2
 website: https://www.keycloak.org/
 useForm: false
