--- a/dev/containers/docker-compose.yml
+++ b/dev/containers/docker-compose.yml
@@ -2,58 +2,39 @@
 # -- DO NOT USE IN PRODUCTION! --
 
 version: "3"
+
 services:
   db:
-    container_name: wiki-db
-    image: postgres:9-alpine
+    image: postgres:11-alpine
     environment:
       POSTGRES_DB: wiki
       POSTGRES_PASSWORD: wikijsrocks
       POSTGRES_USER: wikijs
-    logging:
-      driver: "none"
+    restart: unless-stopped
     volumes:
       - db-data:/var/lib/postgresql/data
-    ports:
-      - "15432:5432"
-
-  adminer:
-    container_name: wiki-adminer
-    image: adminer:latest
-    logging:
-      driver: "none"
-    ports:
-      - "3001:8080"
-
-  # solr:
-  #   container_name: wiki-solr
-  #   image: solr:7-alpine
-  #   logging:
-  #     driver: "none"
-  #   ports:
-  #     - "8983:8983"
-  #   volumes:
-  #     - solr-data:/opt/solr/server/solr/mycores
-  #   entrypoint:
-  #     - docker-entrypoint.sh
-  #     - solr-precreate
-  #     - wiki
 
   wiki:
-    container_name: wiki-app
     build:
-      context: ../..
-      dockerfile: dev/containers/Dockerfile
+      context: https://github.com/waveywaves/requarks-wiki
+      dockerfile: dev/build/Dockerfile
+    # image: ghcr.io/requarks/wiki:2
     depends_on:
       - db
+    environment:
+      DB_TYPE: postgres
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: wikijs
+      DB_PASS: wikijsrocks
+      DB_NAME: wiki
+    restart: unless-stopped
     ports:
-      - "3000:3000"
-    volumes:
-      - ../..:/wiki
-      - /wiki/node_modules
-      - /wiki/.git
-
+      - "3000"
+    deploy:
+      resources:
+        limits:
+          memory: 500M
 
 volumes:
   db-data:
-  # solr-data:
