fix: admin storage page display issues

--- a/server/modules/storage/git/definition.yml
+++ b/server/modules/storage/git/definition.yml
@@ -79,6 +79,7 @@ props:
     sensitive: true
     order: 13
     if:
+      - { key: 'authType', eq: 'ssh' }
       - { key: 'sshPrivateKeyMode', eq: 'inline' }
   verifySSL:
     type: Boolean
