--- a/server/modules/storage/azure/definition.yml
+++ b/server/modules/storage/azure/definition.yml
@@ -50,7 +50,7 @@ props:
         - hot|Hot
         - cool|Cool
 actions:
-  - handler: exportAll
+  exportAll:
     label: Export All DB Assets to Azure
     hint: Output all content from the DB to Azure Blog Storage, overwriting any existing data. If you enabled Azure Blog Storage after content was created or you temporarily disabled it, you'll want to execute this action to add the missing content.
     icon: this-way-up
