--- a/server/modules/storage/gcs/definition.yml
+++ b/server/modules/storage/gcs/definition.yml
@@ -59,7 +59,7 @@ props:
     default: storage.google.com
     order: 5
 actions:
-  - handler: exportAll
+  exportAll:
     label: Export All DB Assets to GCS
     hint: Output all content from the DB to Google Cloud Storage, overwriting any existing data. If you enabled Google Cloud Storage after content was created or you temporarily disabled it, you'll want to execute this action to add the missing content.
     icon: this-way-up
