--- a/server/modules/storage/sftp/definition.yml
+++ b/server/modules/storage/sftp/definition.yml
@@ -87,7 +87,7 @@ props:
     hint: Base directory where files will be transferred to. The path must already exists and be writable by the user.
     icon: symlink-directory
 actions:
-  - handler: exportAll
+  exportAll:
     label: Export All DB Assets to Remote
     hint: Output all content from the DB to the remote SSH server, overwriting any existing data. If you enabled SFTP after content was created or you temporarily disabled it, you'll want to execute this action to add the missing content.
     icon: this-way-up
