--- a/ux/package.json
+++ b/ux/package.json
@@ -32,7 +32,7 @@
     "@codemirror/tooltip": "0.19.16",
     "@codemirror/view": "6.0.2",
     "@lezer/common": "1.0.0",
-    "@quasar/extras": "1.15.0",
+    "@quasar/extras": "1.15.1",
     "@tiptap/core": "2.0.0-beta.176",
     "@tiptap/extension-code-block": "2.0.0-beta.37",
     "@tiptap/extension-code-block-lowlight": "2.0.0-beta.68",
@@ -63,31 +63,32 @@
     "codemirror": "6.0.1",
     "filesize": "9.0.11",
     "filesize-parser": "1.5.0",
-    "graphql": "16.5.0",
+    "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
     "js-cookie": "3.0.1",
     "jwt-decode": "3.1.2",
     "lodash-es": "4.17.21",
     "luxon": "3.0.1",
-    "pinia": "2.0.17",
+    "pinia": "2.0.20",
     "pug": "3.0.2",
-    "quasar": "2.7.5",
+    "quasar": "2.7.7",
     "tippy.js": "6.3.7",
     "uuid": "8.3.2",
-    "v-network-graph": "0.6.5",
+    "v-network-graph": "0.6.6",
     "vue": "3.2.37",
     "vue-codemirror": "6.0.2",
-    "vue-i18n": "9.1.10",
+    "vue-i18n": "9.2.2",
     "vue-router": "4.1.3",
+    "vue3-otp-input": "0.3.6",
     "vuedraggable": "4.1.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "5.0.1",
-    "@quasar/app-vite": "1.0.5",
-    "@types/lodash": "4.14.182",
+    "@intlify/vite-plugin-vue-i18n": "6.0.1",
+    "@quasar/app-vite": "1.0.6",
+    "@types/lodash": "4.14.184",
     "browserlist": "latest",
-    "eslint": "8.20.0",
+    "eslint": "8.22.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-n": "15.2.4",
