--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "pg-tsquery": "8.4.0",
     "pug": "3.0.2",
     "punycode": "2.1.1",
+    "puppeteer-core": "17.1.3",
     "qr-image": "3.2.0",
     "rate-limiter-flexible": "2.3.8",
     "remove-markdown": "0.3.0",
@@ -164,6 +165,7 @@
     "scim-query-filter-parser": "2.0.4",
     "semver": "7.3.7",
     "serve-favicon": "2.5.0",
+    "sharp": "0.31.0",
     "simple-git": "2.21.0",
     "socket.io": "4.5.2",
     "ssh2": "1.9.0",
