--- a/package.json
+++ b/package.json
@@ -88,7 +88,6 @@
     "he": "1.2.0",
     "highlight.js": "10.3.1",
     "i18next": "19.8.3",
-    "i18next-express-middleware": "2.0.0",
     "i18next-node-fs-backend": "2.1.3",
     "image-size": "0.9.2",
     "js-base64": "3.7.2",
@@ -153,6 +152,7 @@
     "pg-pubsub": "0.8.0",
     "pg-query-stream": "4.2.4",
     "pg-tsquery": "8.4.0",
+    "poolifier": "2.2.0",
     "pug": "3.0.2",
     "punycode": "2.1.1",
     "puppeteer-core": "17.1.3",
