--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "connect-session-knex": "3.0.0",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
+    "cron-parser": "4.6.0",
     "cuint": "0.2.2",
     "custom-error-instance": "2.1.2",
     "dependency-graph": "0.9.0",
