--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "filesize": "6.1.0",
     "fs-extra": "9.0.1",
     "getos": "3.2.1",
+    "graphile-worker": "0.13.0",
     "graphql": "16.3.0",
     "graphql-list-fields": "2.0.2",
     "graphql-rate-limit-directive": "2.0.2",
@@ -148,7 +149,6 @@
     "passport-twitch-strategy": "2.2.0",
     "pem-jwk": "2.0.0",
     "pg": "8.8.0",
-    "pg-boss": "8.0.0",
     "pg-hstore": "2.3.4",
     "pg-pubsub": "0.8.0",
     "pg-query-stream": "4.2.4",
