--- a/.github/workflows/auto-updater.yml
+++ b/.github/workflows/auto-updater.yml
@@ -14,6 +14,5 @@ jobs:
       - uses: tgymnich/fork-sync@v1.6.3
         with:
           token: ${{ secrets.PERSONAL_TOKEN }}
-          owner: jdsmithit
-          base: master
-          head: master
+          base: main
+          head: main
