--- a/ux/package.json
+++ b/ux/package.json
@@ -58,6 +58,7 @@
     "@tiptap/starter-kit": "2.0.0-beta.185",
     "@tiptap/vue-3": "2.0.0-beta.91",
     "apollo-upload-client": "17.0.0",
+    "autoprefixer": "^10.4.12",
     "browser-fs-access": "0.31.0",
     "clipboard": "2.0.11",
     "codemirror": "6.0.1",
